		 CHANGES IN servr VERSION 0.16



		 CHANGES IN servr VERSION 0.15

BUG FIXES

- When the environment variable `R_SERVR_PORT` is set, `server_config()` may issue a superfluous warning "createTcpServer: address already in use" due to an unnecessary call to `random_port()` (thanks, @itcarroll, #39).

		 CHANGES IN servr VERSION 0.14

NEW FEATURES

- The argument `host` in `server_config()` can be configured through the global option `servr.host` now, e.g., `options(servr.host = '0.0.0.0')`.

		 CHANGES IN servr VERSION 0.13

NEW FEATURES

- Added a `verbose` argument to `server_config()`.

- The `interval` argument of `server_config()` can be set via the global option `servr.interval` now. For example, `options(servr.interval = 0.5)`.

MAJOR CHANGES

- Server functions such as `httd()` now return the config object created by `server_config()` instead of the server handle returned by `httpuv::startServer()`. The config object contains various information about the server and methods to start/stop the server.

		 CHANGES IN servr VERSION 0.12

NEW FEATURES

- Exported the function `random_port()` to return an available random TCP port.

MAJOR CHANGES

- `daemon_list()` returns server IDs instead of handles, so that it will work
  with httpuv >= v1.4.5.1 (rstudio/blogdown#365).

		 CHANGES IN servr VERSION 0.11

NEW FEATURES

- The default value of the `port` argument of `server_config()` can be set via
  the environment variable `R_SERVR_PORT`. If the environment variable does not
  exist, the global option `servr.port` will be used if set, e.g.,
  `options(servr.port = 4322)`. See `?servr::server_config` for details.

		 CHANGES IN servr VERSION 0.10

NEW FEATURES

- Added a function `browse_last()` to reopen the last browsed page.

MAJOR CHANGES

- The `daemon` argument in `server_config()` now defaults to `interactive()`, i.e., **servr** starts a daemonized server that does not block your interactive R session by default.

		 CHANGES IN servr VERSION 0.9
